tests/snapshots/refactor_coverage__snapshots_browser_prompt_and_continue@transcript.snap
---
source: tests/refactor_coverage.rs
expression: snapshot.render_transcript()
---
== session: browser_prompt ==
1) repl timeout_ms=10000
>>> browser()
<<< Called from: top level 

2) repl timeout_ms=10000
>>> c

3) repl timeout_ms=10000
>>> 1+1
<<< [1] 2
