tests/snapshots/refactor_coverage__snapshots_pager_hits_with_images.snap
---
source: tests/refactor_coverage.rs
expression: rendered
---
== session: pager_hits_images ==
-- step 1 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": "\nset.seed(1)\ncat(\"# Title\\n\")\nfor (i in 1:60) cat(\"alpha line \", i, \"\\n\", sep = \"\")\nplot(1:5, type = \"l\")\nfor (i in 1:60) cat(\"beta line \", i, \"\\n\", sep = \"\")\nplot(5:1, type = \"l\")\nfor (i in 1:60) cat(\"gamma line \", i, \"\\n\", sep = \"\")\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "[repl] echoed input elided: 3 lines (36 bytes); head: > ; tail: > cat(\"# Title\\n\")\n# Title\n> for (i in 1:60) cat(\"alpha line \", i, \"\\n\", sep = \"\")\nalpha line 1\nalpha line 2\nalpha line 3\nalpha line 4\nalpha line 5\nalpha line 6\nalpha line 7\nalpha line 8\nalpha line 9\nalpha line 10\nalpha line 11"
    },
    {
      "type": "text",
      "text": "--More-- (Np, 10.2%, @0..292/2861)"
    }
  ]
}
-- step 2 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": ":hits alpha\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "#1 @292 Title\n  > alpha line 12"
    },
    {
      "type": "text",
      "text": "--More-- (Np, 10.6%, @292..306/2861)"
    }
  ]
}
-- step 3 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": ":seek 0\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "[pager] elided output (already shown): @0..306"
    },
    {
      "type": "text",
      "text": "alpha line 13\nalpha line 14\nalpha line 15\nalpha line 16\nalpha line 17\nalpha line 18\nalpha line 19\nalpha line 20\nalpha line 21\nalpha line 22\nalpha line 23\nalpha line 24\nalpha line 25\nalpha line 26\nalpha line 27\nalpha line 28\nalpha line 29\nalpha line 30\nalpha line 31\nalpha line 32\nalpha line 33"
    },
    {
      "type": "text",
      "text": "--More-- (Np, 20.9%, @306..600/2861)"
    }
  ]
}
-- step 4 --
call:
{
  "tool": "r_repl",
  "arguments": {
    "input": ":hits beta\n",
    "timeout_ms": 10000
  }
}
response:
{
  "type": "tool_result",
  "is_error": false,
  "content": [
    {
      "type": "text",
      "text": "#1 @978 Title\n  > [repl] echoed input elided: 2 lines (79 bytes); head: > plot(1:5, type = \"l\"); tail: > for (i in 1:60) cat(\"beta line \", i, \"\\n\", sep = \"\")"
    },
    {
      "type": "text",
      "text": "--More-- (Np, 39.0%, @978..1118/2861)"
    }
  ]
}
