tests/snapshots/refactor_coverage__snapshots_restart_and_interrupt_with_plots@transcript.snap
---
source: tests/refactor_coverage.rs
expression: snapshot.render_transcript()
---
== session: restart_interrupt ==
1) r_repl timeout_ms=10000
>>> 
>>> set.seed(1)
>>> plot(1:5, type = "l")
<<< [image/png len=0]

2) r_repl timeout_ms=10000
>>> 
>>> plot(5:1, type = "l")
>>> cat("plots_done\n")
<<< [repl] echoed input elided: 3 lines (49 bytes); head: > ; tail: > cat("plots_done\n")
<<< plots_done
<<< [image/png len=0]

3) r_repl
>>> 
<<< [repl] new session started

4) r_repl timeout_ms=10000
>>> 1+1
<<< [1] 2

5) r_repl timeout_ms=200
>>> Sys.sleep(5)
<<< <<console status: busy, write_stdin timeout reached; elapsed_ms=N>>

6) r_repl timeout_ms=5000
>>> 
<<< stderr: 

7) r_repl timeout_ms=10000
>>> 1+1
<<< [1] 2
